--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,10 @@
   </head>
   <body>
     <div class="container azul">
-      <header class="top row gutters{% if page.title == "Home" %} fadeInLeft animated{% endif %}">
+      <header class="top row gutters{% if page.path == 'index.html' || '' %} fadeInLeft animated{% endif %}">
         <div class="col span_2 center">
           <!-- TODO: add baseurl to the logo link -->
-          <a href="{{ site.url }}" id="logo" title="{{ site.data.brume.name }}"
+          <a href="{{ site.baseurl }}" id="logo" title="{{ site.data.brume.name }}"
              style="background-image: url({{site.baseurl}}/public/images/logo.png);"></a>
         </div>
         {% include navigation.html %}
@@ -18,8 +18,7 @@
 
       <footer>
         <p>
-          This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/deed.en_US">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
-        </p>
+          &copy; 2015 <a href="https://github.com/{{ site.github_username }}" target="_new">{{ site.github_username }}</a>. All rights reserved. Based on the <a href="https://github.com/aigarsdz/brume" target="_new">Brume Jekyll theme</a> by <a href="https://github.com/aigarsdz" target="_new">aigarsdz</a>.
       </footer>
     </div>
 
