--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
 <article class="single row gutters">
   <time class="published" datetime="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date_to_long_string }}</time>
   <h2>{{ page.title }}</h2>
+  {% if page.categories.first != null %}<div style="font-size: small; margin-top: -15px; margin-bottom: 20px">Posted in {% for category in page.categories %}<a href="{{ site.baseurl }}/categories/#{{ category }}">{{ category }}</a>{% unless forloop.last %}, {% endunless %}{% if forloop.last %}.{% endif %}{% endfor %}</div>{% endif %}
 
   {{ content }}
 </article>
